After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 623389 - [iconview] Fix segfault when using rubberband selection
[iconview] Fix segfault when using rubberband selection
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkIconView
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2010-07-02 13:37 UTC by Florian Müllner
Modified: 2010-07-02 14:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[iconview] Fix segfault when using rubberband selection (968 bytes, patch)
2010-07-02 13:38 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2010-07-02 13:37:56 UTC
Just noticed a crash in GtkIconView - see patch.
Comment 1 Florian Müllner 2010-07-02 13:38:58 UTC
Created attachment 165108 [details] [review]
[iconview] Fix segfault when using rubberband selection

When iterating over the cairo region's rectangles, do not decrement
the counter twice ...
Comment 2 Matthias Clasen 2010-07-02 14:20:00 UTC
Comment on attachment 165108 [details] [review]
[iconview] Fix segfault when using rubberband selection

Good catch!
Does this apply to gtk-2-22 as well ? If so, please commit it to that branch too
Comment 3 Florian Müllner 2010-07-02 14:34:11 UTC
(In reply to comment #2)
> (From update of attachment 165108 [details] [review])
> Good catch!
> Does this apply to gtk-2-22 as well ? If so, please commit it to that branch
> too

No, gtk-2-22 still uses GdkRegion instead of cairo_region_t.

Attachment 165108 [details] pushed as 1e1c5e3 - [iconview] Fix segfault when using rubberband selection