[iconview] Fix segfault when using rubberband selection

When iterating over the cairo region's rectangles, do not decrement
the counter twice ...

https://bugzilla.gnome.org/show_bug.cgi?id=623389